--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ tokio-rustls = { version = "0.26", optional = true }
 rustls = { version = "0.23", optional = true }
 rustls-pemfile = { version = "2.0.0", optional = true }
 lazy_static = "1.4.0"
+command-engine = { version = "1.0.0", default-features = false, features = ["async"] }
 
 [target.'cfg(windows)'.dependencies]
 ansi_term = "0.12.1"
