--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,9 @@ rustls-pemfile = { version = "2.0.0", optional = true }
 lazy_static = "1.4.0"
 command-engine = { version = "1.0.0", default-features = false, features = ["async"] }
 sessionless = "0.1.1"
+tokio-tungstenite = "0.21.0"
+log = "0.4.21"
+futures = "0.3.30"
 
 [target.'cfg(windows)'.dependencies]
 ansi_term = "0.12.1"
