--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,8 @@ sessionless = "0.1.1"
 tokio-tungstenite = "0.21.0"
 log = "0.4.21"
 futures = "0.3.30"
+simple-base64 = "0.23"
+chrono = "0.4"
 
 [target.'cfg(windows)'.dependencies]
 ansi_term = "0.12.1"
