--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [features]
 # --- Main features
+production = ["xlix-storage-prod"]
 default = []
 cloudflare = ["tls"]
 # --- Dependencies
@@ -37,6 +38,8 @@ log = "0.4.21"
 futures = "0.3.30"
 simple-base64 = "0.23"
 chrono = "0.4"
+xlix-storage = { git = "https://github.com/xlix-app/storage" }
+xlix-storage-prod = { git = "https://github.com/xlix-app/storage-prod", optional = true }
 
 [target.'cfg(windows)'.dependencies]
 ansi_term = "0.12.1"
